--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark custom-navbar sticky-top">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <div class="container">
 
     <!-- Logo -->
