--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,7 +4,7 @@
 
     <!-- Logo -->
     <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.html">
-      <i class="bi bi-search-heart fs-3"></i> Lost & Found
+      <i class="bi bi-search fs-3"></i> Lost & Found
     </a>
 
     <!-- Mobile Toggle -->
